--- a/src/access-request/index.html
+++ b/src/access-request/index.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <title>Project Omni</title>
+    <meta
+      name="description"
+      content="A better search engine with one mission; organizing the worlds information leading you to signal, away from noise in a very loud world."
+    />
   </head>
   <body>
     <div id="root"></div>
